@@ -26,9 +26,6 @@ Features that should be explored.
  - Color the revgraph to make it easier to follow branches. Idea by
    Dominik Vogt.
 
- - Blame view: Allow names in the author column to be abbreviated to
-   initials. Will optimize screen usage for the blame view.
-
  - Commit cache: Many views use commit information and load it into
    their own custom data structure. Having the information shared would
    make it easier to do various interesting stuff across the views.
