@@ -85,7 +85,8 @@ The following variables can be set:
 
 'author-width' (int)::
 
-	Width of the author column.
+	Width of the author column. When set to 5 or below, the author name
+	will be abbreviated to the author's initials.
 
 'line-graphics' (bool)::
 
